--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "recettes-app",
+  "homepage": "http://myname.github.io/myapp",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
